# causalshift

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: plot_all_results.py  plot_separation.py
causalshift/: __init__.py
causalshift/abstractions/: __init__.py  base.py  mechanism_invariant.py  predictive.py
causalshift/baselines/: __init__.py  cbm_baseline.py  dbc_baseline.py  llm_planner.py  ucb_abstract.py
causalshift/envs/: __init__.py  branch.py  chain.py  registry.py  xor.py
causalshift/router/: __init__.py  adaptive.py
causalshift/utils/: __init__.py
experiments/: full_separation.py  gpu_baselines.py  llm_baselines.py  router_experiment.py  xor_separation.py
latex/: .gitignore  main.tex  references.bib
notebooks/: dreamer_cdp_baseline.py  dreamerv3_baseline.py  ne_dreamer_baseline.py  trans_dreamer_baseline.py
results/: statistical_summary.json
results/full_separation/: results.json
results/gpu/: cbm_branch.json  cbm_chain.json  cbm_xor.json  dbc_branch.json  dbc_chain.json  dbc_xor.json  dreamer_cdp_xor_results.json  dreamerv3_xor_results.json  ne_dreamer_xor_results.json  trans_dreamer_xor_results.json
results/llm/: deepseek-v3.2_blackbox.json  deepseek-v3.2_cot.json  deepseek-v3.2_privileged.json  gemini-3.1-pro_blackbox.json  gemini-3.1-pro_cot.json  gemini-3.1-pro_privileged.json  gpt-5.4_blackbox.json  gpt-5.4_cot.json  gpt-5.4_privileged.json  qwen3-235b_blackbox.json  qwen3-235b_cot.json  qwen3-235b_privileged.json
results/router/: results.json
tests/: test_branch_env.py  test_chain_env.py  test_xor_env.py
