[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalshift"
version = "0.1.0"
description = "The Cost of Counterfactuals: A Separation Theorem for Transfer-Robust Abstraction in Modular Decision Processes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Panavin Singh"},
]

dependencies = [
    "gymnasium>=0.29.1",
    "numpy>=2.0.0",
    "scipy>=1.12.0",
    "torch>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
llm = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "google-cloud-aiplatform>=1.40.0",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
dreamer = [
    "jax[cuda12]>=0.4.25",
    "flax>=0.8.0",
    "optax>=0.2.0",
]

[tool.setuptools.packages.find]
include = ["causalshift*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
